tdf#95507 - implement opengl / 50% invert method.

Change-Id: I8488cb8e8074831a6f81e6c8c122462c9819d25d